# pipelineforge

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: default.toml
notebooks/: eda.ipynb
src/pipelineforge/: __init__.py
src/pipelineforge/config/: schema.py  settings.py
src/pipelineforge/core/: __init__.py  logging.py  paths.py
src/pipelineforge/data/: __init__.py  loaders.py  validation.py
src/pipelineforge/evaluation/: __init__.py  classification.py  regression.py  reporter.py  validator.py
src/pipelineforge/exceptions/: __init__.py  base.py
src/pipelineforge/features/: __init__.py  generator.py  interaction.py  selector.py  transformer.py
src/pipelineforge/model_selection/: __init__.py  splitter.py  validator.py
src/pipelineforge/models/: __init__.py  classifier.py  regressor.py  validator.py
src/pipelineforge/orchestration/: __init__.py  base.py  classification_pipeline.py  regression_pipeline.py
src/pipelineforge/pipelines/: training_pipeline.py
src/pipelineforge/preprocessing/: __init__.py  cleaner.py  encoder.py  imputer.py  scaler.py  selector.py
src/pipelineforge/utils/: logger.py
src/pipelineforge/visualization/: __init__.py  (+2 more)
tests/: test_classification_metrics.py  test_classification_pipeline.py  test_classifier.py  test_cleaner.py  test_config.py  test_encoder.py  test_exceptions.py  test_feature_selector.py  test_generator.py  test_imputer.py  test_interaction.py  test_loaders.py  test_logging.py  test_paths.py  test_pipeline_result.py  test_plots.py  test_regression_metrics.py  test_regression_pipeline.py  test_regressor.py  test_reporter.py  test_scaler.py  test_selector.py  test_splitter.py  test_transformer.py  test_validation.py
